# flake8-ic

./: README.md  pyproject.toml
.github/workflows/: testing.yaml
src/flake8_ic/: checker.py
tests/: checker_test.py
