[project]
name = "flake8-ic"
version = "0.0.0"
description = "This package provides a plugin for flake8 that checks the usage of ic() function from icecream package."
readme = "README.md"
authors = [
    { name = "Marco Espinosa", email = "marco@marcoespinosa.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["flake8", "plugin", "icecream", "ic", "debugging", "linting", "code quality"]
dependencies = [
    "flake8>=7.1.1",
    "toml>=0.10.2",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest-coverage>=0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.0",
]

[tool.flake8.plugins]
IC100 = "flake8_ic:IcecreamChecker"
